--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-server": "nodemon ./server.js",
+    "build-server": "node ./server.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -23,13 +25,19 @@
     "@tanstack/react-query": "^5.80.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
+    "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "vite-express": "^0.21.1",
     "zod": "^3.25.64",
@@ -47,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.5",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
