--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.6",
     "svix": "^1.67.0",
@@ -60,6 +61,7 @@
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.5",
+    "supabase": "^2.45.5",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
