--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.6",
     "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
